--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.1.0/octicons.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" />
+    <link href="css/styles.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
       <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -18,10 +19,15 @@
 
   </head>
   <body>
-
-    <div id="table">
-      <table id="example" class="table table-striped table-bordered" width="90%"></table>
+    <div id="wrapper">
+      <div class="info">
+        <h1>MIU Services Dashboard</h1>
+      </div>
+      <div id="table">
+        <table id="example" class="table table-striped table-bordered" width="90%"></table>
+      </div>
     </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
