--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div id="wrapper">
       <div class="info">
-        <h1 class="text-center">MIU Services Dashboard</h1>
+        <h1 id="board-name" class="text-center"></h1>
       </div>
       <div id="table">
         <table id="example" class="table table-striped table-bordered" width="90%"></table>
